src/reader/entry/tests/error/function.sibs
@i#mport ./common.sibs;
@im%port ./common.sibs;
@imp^ort ./common.sibs;
@imp@ort ./common.sibs;
@import@ ./common.sibs;
@remove?? ./some_path/to_something;
@hash @hash;
@"hash";